Implement end-to-end audit governance and auditor operations workflows.
This adds secure RBAC-backed audit lifecycle management, questionnaire templating/versioning, evidence handling (including uploads), activity and delegation models, delegate task views, and an auditor workbench with operational queues, filters, and exports to support full annual assessment execution.

Made-with: Cursor